renamed linear gradient  style.css

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h3 {
   /* background-color: #f9fafb; */
   padding: 20px;
   background-image: linear-gradient(
-    to right,
+    45deg,
     rgba(0, 0, 0, 0.929),
     rgba(15, 15, 15, 0.955)
   );
@@ -154,7 +154,7 @@ h4 {
 
 .intro-section {
   background-image: linear-gradient(
-    to right,
+    45deg,
     rgba(0, 0, 0, 0.929),
     rgba(15, 15, 15, 0.955)
   );
@@ -236,7 +236,7 @@ h5 {
 
 .about {
   background-image: linear-gradient(
-    to right,
+    to 45deg,
     rgba(0, 0, 0, 0.929),
     rgba(15, 15, 15, 0.955)
   );
@@ -276,7 +276,7 @@ h5 {
 
 .events {
   background-image: linear-gradient(
-    to right,
+    to 45deg,
     rgba(0, 0, 0, 0.929),
     rgba(15, 15, 15, 0.955)
   );
