--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ h5 {
 
 .events {
   background-image: linear-gradient(
-    45deg,
+    to right,
     rgba(0, 0, 0, 0.929),
     rgba(15, 15, 15, 0.955)
   );
@@ -519,7 +519,7 @@ h5 {
   /* this section is for about me */
 
   h5 {
-    font-size: 0.5rem;
+    font-size: 0.9rem;
     margin-bottom: 1rem;
   }
 
@@ -529,8 +529,9 @@ h5 {
   }
 
   .about p {
-    line-height: 0.5rem;
-    font-size: 0.3rem;
+    line-height: 0.7rem;
+    font-size: 0.4rem;
+    font-family: "Courier New", Courier, monospace;
   }
 
   .a-img {
@@ -542,38 +543,44 @@ h5 {
   .events-c {
     grid-template-columns: 2fr 1fr;
     margin-bottom: 0.5rem;
+    column-gap: 1rem;
   }
 
   .events-c img {
-    height: 5rem;
+    height: 9rem;
   }
 
   .events-c p {
     line-height: 0.7rem;
     font-size: 0.3rem;
+    transform: translateY(-10px);
   }
 
   .events-hearder {
     font-size: 0.5rem;
-    margin-bottom: 0.9rem;
+    margin-bottom: 0rem;
+    padding-bottom: 0;
   }
 
   .events-cr {
     grid-template-columns: 1fr 2fr;
     margin-bottom: 0.5rem;
+    column-gap: 1rem;
+    padding: 25px;
   }
 
   .events-cr img {
-    height: 5rem;
+    height: 9rem;
   }
   .events-cr p {
-    line-height: 0.7rem;
+    line-height: 0.5rem;
     font-size: 0.3rem;
-    transform: translateY(-20px);
+    transform: translateY(-40px);
   }
 
   .events-hearderr {
-    font-size: 0.5rem;
-    margin-bottom: 0.2rem;
+    font-size: 0.7rem;
+    margin-bottom: 0rem;
+    padding-bottom: 0;
   }
 }
