--- a/style.css
+++ b/style.css
@@ -529,8 +529,8 @@ h5 {
   }
 
   .about p {
-    line-height: 0.7rem;
-    font-size: 0.4rem;
+    line-height: 0.5rem;
+    font-size: 0.2rem;
     font-family: "Courier New", Courier, monospace;
   }
 
@@ -547,18 +547,18 @@ h5 {
   }
 
   .events-c img {
-    height: 9rem;
+    height: 8rem;
   }
 
   .events-c p {
     line-height: 0.7rem;
     font-size: 0.3rem;
-    transform: translateY(-10px);
+    /* transform: translateY(-10px); */
   }
 
   .events-hearder {
-    font-size: 0.5rem;
-    margin-bottom: 0rem;
+    font-size: 0.75rem;
+    margin-bottom: 0.7rem;
     padding-bottom: 0;
   }
 
@@ -570,12 +570,12 @@ h5 {
   }
 
   .events-cr img {
-    height: 9rem;
+    height: 8rem;
   }
   .events-cr p {
     line-height: 0.5rem;
     font-size: 0.3rem;
-    transform: translateY(-40px);
+    /* transform: translateY(-40px); */
   }
 
   .events-hearderr {
